Ship desktop icon with systemd-ui

--- a/README
+++ b/README
@@ -27,4 +27,5 @@ AUTHOR:
         Lennart Poettering with major support from Kay Sievers
 
 LICENSE:
-        GPLv2+ for all code.
+        GPLv2+ for all code,
+        CC-BY-3.0-US for the desktop icon (from the GNOME Project).
